[gd_scene load_steps=6 format=3 uid="uid://dch11o2847jf2"]

[ext_resource type="Texture2D" uid="uid://byx5fhkggvnip" path="res://art/slimes/slime.png" id="1_6hm3f"]
[ext_resource type="Script" path="res://scenes/slimes/slime.gd" id="1_wyugy"]
[ext_resource type="Script" path="res://behaviours/movement_behavior.gd" id="3_4t42t"]
[ext_resource type="Script" path="res://behaviours/attackable.gd" id="4_gtmgr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ajivx"]
size = Vector2(93.4375, 46.875)

[node name="Slime" type="Area2D"]
script = ExtResource("1_wyugy")
bite_size = 20
health = 200
metadata/type = "Slime"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(41, 50)
shape = SubResource("RectangleShape2D_ajivx")

[node name="EatingPace" type="Timer" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(95, 95)
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_6hm3f")
expand_mode = 3

[node name="MovementBehavior" type="Node" parent="."]
script = ExtResource("3_4t42t")

[node name="Attackable" type="Node" parent="."]
script = ExtResource("4_gtmgr")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="dead" from="." to="." method="_on_dead"]
[connection signal="entity_detected" from="." to="." method="_on_entity_detected"]
[connection signal="plant_detected" from="." to="." method="_on_plant_detected"]
[connection signal="timeout" from="EatingPace" to="." method="_on_eating_pace_timeout"]
